// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GasSettings > renders the GasSettings component closed 1`] = `
<div
  class="gas-settings svelte-1daay07"
>
  <dl
    class="gas-settings__edit svelte-1daay07"
  >
    <div
      class="gas-fee svelte-1c6b481"
    >
      <span>
        Fee:
      </span>
       
      <div
        class="gas-fee__amount svelte-1c6b481"
      >
        <div
          class="gas-fee__amount-value svelte-1c6b481"
        >
          <span
            class="svelte-1c6b481"
          >
            max
          </span>
           
          <span
            class="svelte-1c6b481"
          >
            0.020000000
          </span>
        </div>
         
        <svg
          class="dusk-icon dusk-icon--size--default dusk-amount__icon"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
      </div>
    </div>
    <dd>
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          EDIT
        </span>
      </button>
    </dd>
  </dl>
   
</div>
`;

exports[`GasSettings > renders the GasSettings component opened 1`] = `
<div
  class="gas-settings svelte-1daay07"
>
  <dl
    class="gas-settings__edit svelte-1daay07"
  >
    <div
      class="gas-fee svelte-1c6b481"
    >
      <span>
        Fee:
      </span>
       
      <div
        class="gas-fee__amount svelte-1c6b481"
      >
        <div
          class="gas-fee__amount-value svelte-1c6b481"
        >
          <span
            class="svelte-1c6b481"
          >
            max
          </span>
           
          <span
            class="svelte-1c6b481"
          >
            0.020000000
          </span>
        </div>
         
        <svg
          class="dusk-icon dusk-icon--size--default dusk-amount__icon"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
      </div>
    </div>
    <dd>
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          CLOSE
        </span>
      </button>
    </dd>
  </dl>
   
  <div
    class="gas-settings svelte-1daay07"
    style="animation: __svelte_276924520_0 400ms linear 0ms 1 both;"
  >
    <label
      class="gas-control svelte-1p4ekyk"
    >
      <span
        class="gas-control__label svelte-1p4ekyk"
      >
        Price: (lux)
      </span>
       
      <input
        class="dusk-textbox dusk-textbox-number gas-control__input"
        max="20000000"
        min="1"
        required=""
        type="number"
      />
      
    </label>
     
    <label
      class="gas-control svelte-1p4ekyk"
    >
      <span
        class="gas-control__label svelte-1p4ekyk"
      >
        Gas Limit: (unit)
      </span>
       
      <input
        class="dusk-textbox dusk-textbox-number gas-control__input"
        max="1000000000"
        min="10000000"
        required=""
        type="number"
      />
      
    </label>
  </div>
</div>
`;
